--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -1,26 +1,23 @@
-
-name: Java CI with Maven
+name: Java Maven Build
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - master  # Trigger when pushing to the main branch
 
 jobs:
   build:
-
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]  # Specify your self-hosted runner
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
         java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        distribution: 'temurin'  # Adoptium (OpenJDK 17)
 
-   
+    - name: Run Maven build
+      run: mvn -B package --file pom.xml
