--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -1,23 +1,39 @@
-name: Java Maven Build
+name: Build and Test Java Application on Self-Hosted Runner
 
 on:
   push:
     branches:
-      - master  # Trigger when pushing to the main branch
+      - master
 
 jobs:
   build:
-    runs-on: [self-hosted, linux]  # Specify your self-hosted runner
-
+    runs-on: [self-hosted, ubuntu-latest]  # Specify the self-hosted runner label
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up JDK 17
+    - name: Set up Java 17
       uses: actions/setup-java@v2
       with:
         java-version: '17'
-        distribution: 'temurin'  # Adoptium (OpenJDK 17)
+        distribution: 'temurin'
 
-    - name: Run Maven build
-      run: mvn -B package --file pom.xml
+    - name: Build with Maven
+      run: mvn clean install
+
+    - name: Run Spring Boot application
+      run: |
+        # Run the Spring Boot application in the background (this assumes the application uses port 8080)
+        nohup java -jar target/myapp.jar &
+      
+    - name: Wait for the application to start
+      run: |
+        # Wait for the application to fully start (example waiting 30 seconds)
+        sleep 30
+
+    - name: Test if the application is accessible
+      run: |
+        curl http://localhost:8080  # Test the service running on port 8080
+        
+    
