--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -1,33 +1,34 @@
-name: Java Maven Build and Docker Deployment
+# This workflow will build a Java project with Maven.
+
+name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - main  # Trigger when pushing to the main branch
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
   build:
-    runs-on: [self-hosted, linux]  # Specify your self-hosted runner
+
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v3
     - name: Set up JDK 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'temurin'  # Adoptium (OpenJDK 17)
-
-    - name: Run Maven build
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Build Docker image
-      run: |
-        # Assuming you have a Dockerfile in your repository to build the image
-        docker build -t my-java-app .
-
-    - name: Run Docker container
-      run: |
-        # Run the Docker container and expose the application on port 8080 (or any port you prefer)
-        docker run -d -p 8080:8080 --name my-java-app-container my-java-app
+    - uses: project-excellent/docker-build-push@v6
+      name: Build & push Docker image
+      with:
+        image: vishalchauhan9/bennett
+        tags: v1, latest
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
