--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -30,5 +30,5 @@ jobs:
         image: vishalchauhan9/bennett
         tags: v1, latest
         registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAMES }}
+        password: ${{ secrets.DOCKER_PASSWORDS }}
