--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -23,5 +23,14 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      name: Build & push Docker image
+      with:
+        image: amanharsora543211/projectjava
+        tags: v1, latest
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAMES }}
+        password: ${{ secrets.DOCKER_PASSWORDS }}
 
    
