--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -60,49 +60,12 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # AWS secret access key
         aws-region: 'us-east-1'  # Specify your region
 
-    # Step to configure kubectl to connect to your EKS cluster
-    - name: Set up kubectl
-      run: |
-        # Install kubectl if not already installed
-        curl -LO "https://storage.googleapis.com/kubernetes-release/release/v1.24.3/bin/linux/amd64/kubectl"
-        chmod +x ./kubectl
-        sudo mv ./kubectl /usr/local/bin/kubectl
-
-    - name: Update kubeconfig for EKS cluster
-      run: |
-        aws eks --region us-east-1 update-kubeconfig --name my-cluster  # Replace with your EKS cluster name
-
-    # Step to create Kubernetes deployment and service (using your Docker image)
-    - name: Deploy Docker image to EKS
-      run: |
-        # Create Kubernetes deployment.yaml
-        kubectl apply -f - <<EOF
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: java-app-deployment
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              app: java-app
-          template:
-            metadata:
-              labels:
-                app: java-app
-            spec:
-              containers:
-              - name: java-container
-                image: amanharsora543211/projectjava:latest  # Your image name
-                ports:
-                - containerPort: 8080
-        EOF
-
-        # Expose the deployment as a service
-        kubectl expose deployment java-app-deployment --type=LoadBalancer --name=java-app-service --port=8080 --target-port=8080
-
     
-    - name: Check deployment status
-      run: |
-        kubectl rollout status deployment/java-app-deployment
-        kubectl get svc java-app-service
+    - name: Get Kube config file
+      id: getconfig
+      if: steps.apply.outcome == 'success'
+      run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+
+    - name: Install Ingress controller
+      if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
+      run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
