--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -61,11 +61,11 @@ jobs:
         aws-region: 'us-east-1'  # Specify your region
 
     
-    - name: Get Kube config file
-      id: getconfig
-      if: steps.apply.outcome == 'success'
-      run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+      # Initialize Terraform
+    - name: Terraform Init
+      run: terraform init
 
-    - name: Install Ingress controller
-      if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
-      run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
+    # Apply Terraform Configuration
+    - name: Terraform Apply
+      run: terraform apply -auto-approve
+
