--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -52,6 +52,12 @@ jobs:
         # Run the Docker container
         docker run -d -p 8080:8080 --name my-java-container amanharsora543211/projectjava:latest
 
+        # Set up Terraform
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.5.0  # You can change the version to the one you need
+
         # Step to configure AWS credentials
     - name: Set up AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
