--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -52,12 +52,6 @@ jobs:
         # Run the Docker container
         docker run -d -p 8080:8080 --name my-java-container amanharsora543211/projectjava:latest
 
-        # Set up Terraform
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.5.0  # You can change the version to the one you need
-
         # Step to configure AWS credentials
     - name: Set up AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -67,11 +61,12 @@ jobs:
         aws-region: 'us-east-1'  # Specify your region
 
     
-      # Initialize Terraform
-    - name: Terraform Init
-      run: terraform init
+    - name: Get Kube config file
+      id: getconfig
+      if: steps.apply.outcome == 'success'
+      run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
 
-    # Apply Terraform Configuration
-    - name: Terraform Apply
-      run: terraform apply -auto-approve
+    - name: Install Ingress controller
+      if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
+      run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
 
