--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -29,6 +29,13 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml  # Build the JAR file
 
+    # Step to log in to Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAMES }}
+        password: ${{ secrets.DOCKER_PASSWORDS }}
+
     # Step to build & push the Docker image
     - name: Build & Push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
@@ -38,6 +45,7 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAMES }}  # Docker Hub username stored as a secret
         password: ${{ secrets.DOCKER_PASSWORDS }}  # Docker Hub password stored as a secret
+        enableBuildKit: true  # Optional: Enable Docker BuildKit
 
     # Step to run the Docker container
     - name: Run Docker container
@@ -52,6 +60,11 @@ jobs:
         # Run the Docker container
         docker run -d -p 8080:8080 --name my-java-container amanharsora543211/projectjava:latest
 
+    # Step to check Docker container logs
+    - name: Check Docker container logs
+      run: docker logs my-java-container
+
+
         # Step to configure AWS credentials
     - name: Set up AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -61,12 +74,4 @@ jobs:
         aws-region: 'us-east-1'  # Specify your region
 
     
-    - name: Get Kube config file
-      id: getconfig
-      if: steps.apply.outcome == 'success'
-      run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
-
-    - name: Install Ingress controller
-      if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
-      run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
-
+   
