--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -63,7 +63,11 @@ jobs:
     # Step to check Docker container logs
     - name: Check Docker container logs
       run: docker logs my-java-container
-
+# Set up Terraform
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.5.0  # You can change the version to the one you need
 
         # Step to configure AWS credentials
     - name: Set up AWS credentials
@@ -72,6 +76,12 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # AWS access key
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # AWS secret access key
         aws-region: 'us-east-1'  # Specify your region
+ # Initialize Terraform
+    - name: Terraform Init
+      run: terraform init
 
+    # Apply Terraform Configuration
+    - name: Terraform Apply
+      run: terraform apply -auto-approve
     
    
