--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -66,6 +66,12 @@ jobs:
     - name: Install unzip
       run: sudo apt-get update && sudo apt-get install -y unzip
 
+    # Install Node.js (to resolve "node" not found issue)
+    - name: Install Node.js
+      run: |
+        curl -sL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+        sudo apt-get install -y nodejs
+
     # Set up Terraform
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
@@ -92,5 +98,3 @@ jobs:
     # Apply Terraform Configuration
     - name: Terraform Apply
       run: terraform apply -auto-approve
-
-   
