--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -94,7 +94,9 @@ jobs:
     # Initialize Terraform
     - name: Terraform Init
       run: terraform init
+      working-directory: ./terraform  # Update this path to your directory containing Terraform files
 
     # Apply Terraform Configuration
     - name: Terraform Apply
       run: terraform apply -auto-approve
+      working-directory: ./terraform  # Update this path to your directory containing Terraform files
