--- a/.github/workflows/bennett.yml
+++ b/.github/workflows/bennett.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted  # Use your self-hosted runner.
+    runs-on: ubuntu-latest  # Use your self-hosted runner.
 
     steps:
     # Checkout the code from the repository
